--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@
                 </svg></div>
             <div>
                 <h1>Royalties Dashboard</h1>
-                <div class="subhead"><span class="version-chip">v15</span><span>ASCAP International detection with refined provider split.</span></div>
+                <div class="subhead"><span class="version-chip">v15</span></div>
             </div>
 
             <div class="controls">
@@ -694,11 +694,6 @@
                 </div>
                 <div class="rev-controls">
                     <select id="revQuarterSelect" class="small-input" style="min-width:140px"></select>
-                    <label class="small">Top N</label>
-                    <input id="revTopN" class="small-input" type="number" min="1" max="200" value="20" style="width:72px" />
-                    <label class="small">Group <span style="color:#9fd0ff">‹</span>%</label>
-                    <input id="revThreshold" class="small-input" type="number" min="0" max="100" value="1" style="width:72px" />
-                    <button id="applyRevControls" class="muted">Apply</button>
                     <button id="downloadRev" class="muted">Download PNG</button>
                     <button class="back-btn nav-btn ghost" data-target="landingView">Back</button>
                 </div>
@@ -1460,6 +1455,8 @@
                 const any = normalized.find(r => r.quarter === q && r.quarterDate);
                 return any ? any.quarterDate : new Date(q.split('-')[0], 0, 1);
             });
+            const palette = ['#4A90E2', '#50E3C2', '#AAB4C2', '#E94E3D', '#7A8A9F'];
+            const fillPalette = ['rgba(74,144,226,0.45)', 'rgba(80,227,194,0.45)', 'rgba(170,180,194,0.45)', 'rgba(233,78,61,0.45)', 'rgba(122,138,159,0.45)'];
             const traces = [];
             for (const s of agg.series) {
                 if (hideOther && s.provider === 'Other') continue;
@@ -1471,7 +1468,9 @@
                         type: 'scatter',
                         mode: 'none',
                         stackgroup: 'stack',
-                        hoverinfo: 'x+y+name'
+                        hoverinfo: 'x+y+name',
+                        line: { width: 0 },
+                        fillcolor: fillPalette[traces.length % fillPalette.length]
                     });
                 } else {
                     traces.push({
@@ -1480,29 +1479,60 @@
                         name: s.provider,
                         type: 'scatter',
                         mode: 'lines+markers',
-                        hoverinfo: 'x+y+name'
+                        hoverinfo: 'x+y+name',
+                        line: {
+                            width: 3,
+                            color: palette[traces.length % palette.length]
+                        },
+                        marker: {
+                            size: 6,
+                            color: palette[traces.length % palette.length]
+                        }
                     });
                 }
             }
             const layout = {
-                margin: {
-                    t: 10,
-                    l: 60,
-                    r: 10,
-                    b: 40
+                template: 'plotly_dark',
+                paper_bgcolor: 'rgba(0,0,0,0)',
+                plot_bgcolor: 'rgba(0,0,0,0)',
+                font: {
+                    family: 'Inter, sans-serif',
+                    color: '#E0E6ED'
                 },
                 title: {
                     text: 'Net income over time by provider (USD)',
                     font: {
-                        size: 14
+                        size: 22,
+                        color: '#4A90E2'
                     }
                 },
+                margin: {
+                    t: 60,
+                    b: 50,
+                    l: 60,
+                    r: 30
+                },
                 xaxis: {
-                    tickformat: '%Y-Q%q'
+                    tickformat: '%Y-Q%q',
+                    showgrid: true,
+                    gridcolor: 'rgba(255,255,255,0.05)',
+                    color: '#AAB4C2',
+                    title: {
+                        text: '',
+                        font: { color: '#AAB4C2' }
+                    }
                 },
                 yaxis: {
-                    tickformat: '.2f'
-                }
+                    tickformat: '.2f',
+                    showgrid: true,
+                    gridcolor: 'rgba(255,255,255,0.05)',
+                    color: '#AAB4C2',
+                    title: {
+                        text: '',
+                        font: { color: '#AAB4C2' }
+                    }
+                },
+                showlegend: traces.length > 1
             };
             Plotly.newPlot(el, traces, layout, {
                 responsive: true,
@@ -1524,6 +1554,8 @@
                 const any = normalized.find(r => r.quarter === q && r.quarterDate);
                 return any ? any.quarterDate : new Date(q.split('-')[0], 0, 1);
             });
+            const palette = ['#4A90E2', '#50E3C2', '#AAB4C2', '#E94E3D', '#7A8A9F'];
+            const fillPalette = ['rgba(74,144,226,0.45)', 'rgba(80,227,194,0.45)', 'rgba(170,180,194,0.45)', 'rgba(233,78,61,0.45)', 'rgba(122,138,159,0.45)'];
             const cumSeries = agg.series.map(s => {
                 let cum = 0;
                 const vals = s.values.map(v => {
@@ -1547,7 +1579,9 @@
                         type: 'scatter',
                         mode: 'none',
                         stackgroup: 'stack',
-                        hoverinfo: 'x+y+name'
+                        hoverinfo: 'x+y+name',
+                        line: { width: 0 },
+                        fillcolor: fillPalette[traces.length % fillPalette.length]
                     });
                 } else {
                     traces.push({
@@ -1556,29 +1590,60 @@
                         name: s.provider,
                         type: 'scatter',
                         mode: 'lines+markers',
-                        hoverinfo: 'x+y+name'
+                        hoverinfo: 'x+y+name',
+                        line: {
+                            width: 3,
+                            color: palette[traces.length % palette.length]
+                        },
+                        marker: {
+                            size: 6,
+                            color: palette[traces.length % palette.length]
+                        }
                     });
                 }
             }
             const layout = {
-                margin: {
-                    t: 10,
-                    l: 60,
-                    r: 10,
-                    b: 40
+                template: 'plotly_dark',
+                paper_bgcolor: 'rgba(0,0,0,0)',
+                plot_bgcolor: 'rgba(0,0,0,0)',
+                font: {
+                    family: 'Inter, sans-serif',
+                    color: '#E0E6ED'
                 },
                 title: {
                     text: 'Cumulative income by provider (USD)',
                     font: {
-                        size: 14
+                        size: 22,
+                        color: '#4A90E2'
                     }
                 },
+                margin: {
+                    t: 60,
+                    b: 50,
+                    l: 60,
+                    r: 30
+                },
                 xaxis: {
-                    tickformat: '%Y-Q%q'
+                    tickformat: '%Y-Q%q',
+                    showgrid: true,
+                    gridcolor: 'rgba(255,255,255,0.05)',
+                    color: '#AAB4C2',
+                    title: {
+                        text: '',
+                        font: { color: '#AAB4C2' }
+                    }
                 },
                 yaxis: {
-                    tickformat: '.2f'
-                }
+                    tickformat: '.2f',
+                    showgrid: true,
+                    gridcolor: 'rgba(255,255,255,0.05)',
+                    color: '#AAB4C2',
+                    title: {
+                        text: '',
+                        font: { color: '#AAB4C2' }
+                    }
+                },
+                showlegend: traces.length > 1
             };
             Plotly.newPlot(el, traces, layout, {
                 responsive: true,
@@ -1647,22 +1712,45 @@
                 type: 'bar',
                 orientation: 'h',
                 marker: {
-                    color: 'rgba(99,179,255,0.95)'
+                    color: '#4A90E2'
                 }
             };
             const layout = {
-                margin: {
-                    t: 10,
-                    l: 260,
-                    r: 10,
-                    b: 40
+                template: 'plotly_dark',
+                paper_bgcolor: 'rgba(0,0,0,0)',
+                plot_bgcolor: 'rgba(0,0,0,0)',
+                font: {
+                    family: 'Inter, sans-serif',
+                    color: '#E0E6ED'
                 },
                 title: {
                     text: 'Top 10 works (USD)',
                     font: {
-                        size: 14
+                        size: 22,
+                        color: '#4A90E2'
                     }
-                }
+                },
+                margin: {
+                    t: 60,
+                    b: 50,
+                    l: 260,
+                    r: 30
+                },
+                xaxis: {
+                    showgrid: true,
+                    gridcolor: 'rgba(255,255,255,0.05)',
+                    color: '#AAB4C2',
+                    title: {
+                        text: 'USD',
+                        font: { color: '#AAB4C2' }
+                    }
+                },
+                yaxis: {
+                    showgrid: true,
+                    gridcolor: 'rgba(255,255,255,0.05)',
+                    color: '#AAB4C2'
+                },
+                showlegend: false
             };
             Plotly.newPlot(el, [trace], layout, {
                 responsive: true,
@@ -1769,31 +1857,65 @@
                 name: 'Other',
                 values: otherVals
             });
-            const traces = series.map(s => ({
+            const palette = ['#4A90E2', '#50E3C2', '#AAB4C2', '#E94E3D', '#7A8A9F'];
+            const traces = series.map((s, idx) => ({
                 x: quarters,
                 y: s.values,
                 name: s.name,
-                type: 'bar'
+                type: 'bar',
+                marker: {
+                    color: palette[idx % palette.length]
+                }
             }));
             const layout = {
-                barmode: 'stack',
-                margin: {
-                    t: 10,
-                    l: 80,
-                    r: 10,
-                    b: 120
+                template: 'plotly_dark',
+                paper_bgcolor: 'rgba(0,0,0,0)',
+                plot_bgcolor: 'rgba(0,0,0,0)',
+                font: {
+                    family: 'Inter, sans-serif',
+                    color: '#E0E6ED'
                 },
                 title: {
                     text: 'Revenue class breakdown (stacked) by quarter (USD)',
                     font: {
-                        size: 14
+                        size: 22,
+                        color: '#4A90E2'
                     }
                 },
+                margin: {
+                    t: 60,
+                    b: 120,
+                    l: 80,
+                    r: 30
+                },
+                xaxis: {
+                    showgrid: true,
+                    gridcolor: 'rgba(255,255,255,0.05)',
+                    color: '#AAB4C2',
+                    title: {
+                        text: 'Quarter',
+                        font: { color: '#AAB4C2' }
+                    }
+                },
+                yaxis: {
+                    showgrid: true,
+                    gridcolor: 'rgba(255,255,255,0.05)',
+                    color: '#AAB4C2',
+                    title: {
+                        text: 'USD',
+                        font: { color: '#AAB4C2' }
+                    }
+                },
+                barmode: 'stack',
                 legend: {
                     orientation: 'v',
                     x: 1.02,
-                    y: 1
-                }
+                    y: 1,
+                    font: {
+                        color: '#E0E6ED'
+                    }
+                },
+                showlegend: traces.length > 1
             };
             Plotly.newPlot(el, traces, layout, {
                 responsive: true,
@@ -1802,14 +1924,19 @@
         }
 
         function getRevControls() {
-            const topN = Math.max(1, parseInt(document.getElementById('revTopN').value || '20', 10));
-            const threshold = Math.max(0, parseFloat(document.getElementById('revThreshold').value || '1'));
+            const topInput = document.getElementById('revTopN');
+            const thresholdInput = document.getElementById('revThreshold');
+            const topN = topInput ? Math.max(1, parseInt(topInput.value || '20', 10)) : 20;
+            const threshold = thresholdInput ? Math.max(0, parseFloat(thresholdInput.value || '1')) : 1;
             return {
                 topN,
                 threshold
             };
         }
-        document.getElementById('applyRevControls').addEventListener('click', () => renderRevenueStack());
+        const revQuarterSelectEl = document.getElementById('revQuarterSelect');
+        if (revQuarterSelectEl) {
+            revQuarterSelectEl.addEventListener('change', () => renderRevenueStack());
+        }
 
         // landing KPIs & diagnostics
         function refreshVisualsAfterConversion() {
