Fill missing quarters in work income timeline

--- a/index.html
+++ b/index.html
@@ -1296,13 +1296,21 @@
         }
 
         // periodo parser and normalization
-        function quarterLabelToDate(label) {
+        function parseQuarterParts(label) {
             if (!label) return null;
-            const match = String(label).trim().match(/^(\d{4})-Q([1-4])$/);
+            const match = String(label).trim().match(/^(\d{4})-Q([1-4])$/i);
             if (!match) return null;
             const year = Number(match[1]);
             const quarter = Number(match[2]);
             if (!Number.isFinite(year) || !Number.isFinite(quarter)) return null;
+            return { year, quarter };
+        }
+
+        function quarterLabelToDate(label) {
+            if (!label) return null;
+            const parts = parseQuarterParts(label);
+            if (!parts) return null;
+            const { year, quarter } = parts;
             return new Date(year, (quarter - 1) * 3, 1);
         }
 
@@ -1841,9 +1849,50 @@
                     if (dt) entry.quarterDate = dt;
                 }
             });
-            const series = Array.from(map.values()).filter(item => item.quarterDate instanceof Date && !isNaN(item.quarterDate));
-            series.sort((a, b) => a.quarterDate - b.quarterDate);
-            return series;
+            const validEntries = Array.from(map.entries()).filter(([key, value]) => {
+                if (!(value.quarterDate instanceof Date) || isNaN(value.quarterDate)) return false;
+                return parseQuarterParts(key) !== null;
+            });
+            if (!validEntries.length) return [];
+            validEntries.sort((a, b) => a[1].quarterDate - b[1].quarterDate);
+            const firstParts = parseQuarterParts(validEntries[0][0]);
+            const lastParts = parseQuarterParts(validEntries[validEntries.length - 1][0]);
+            if (!firstParts || !lastParts) {
+                return validEntries.map(([, value]) => value);
+            }
+            const timeline = [];
+            const advance = parts => {
+                if (parts.quarter === 4) {
+                    parts.quarter = 1;
+                    parts.year += 1;
+                } else {
+                    parts.quarter += 1;
+                }
+            };
+            const isAfter = (a, b) => a.year > b.year || (a.year === b.year && a.quarter > b.quarter);
+            const current = { ...firstParts };
+            while (!isAfter(current, lastParts)) {
+                const key = `${current.year}-Q${current.quarter}`;
+                const existing = map.get(key);
+                if (existing && existing.quarterDate instanceof Date && !isNaN(existing.quarterDate)) {
+                    timeline.push({
+                        quarter: existing.quarter,
+                        quarterDate: existing.quarterDate,
+                        amount: existing.amount
+                    });
+                } else {
+                    const dt = quarterLabelToDate(key);
+                    if (dt) {
+                        timeline.push({
+                            quarter: key,
+                            quarterDate: dt,
+                            amount: 0
+                        });
+                    }
+                }
+                advance(current);
+            }
+            return timeline;
         }
 
         function renderWorkIncomeChart() {
